--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mindset-react-vite",
-  "homepage": "/",
+  "homepage": "/headless-wp-react",
   "private": true,
   "version": "1.0.0",
   "type": "module",
